added templates for webpages

--- a/alpha/home/templates/404.html
+++ b/alpha/home/templates/404.html
@@ -1,12 +1,10 @@
 {% extends 'base.html' %}
 
-{% block author %}Sam{% endblock %}
-
-{% block main %}
-<div id="main-left">
+{% block page %}
+<div id="main">
   <header>
     <h1>Uhoh! Page not found</h1>
     <p>Sorry about that</p>
   </header>
-</div><!-- end of #main-left -->
+</div>
 {% endblock %}
