adding view event tempalte

--- a/alpha/home/templates/header.html
+++ b/alpha/home/templates/header.html
@@ -1,7 +1,7 @@
 <header id="header">
-
-  <img src="{{ STATIC_URL }}img/p-logo.png">
-
+  <a href="{% url home %}">
+     <img src="{{ STATIC_URL }}img/p-logo.png">
+  </a>
   <nav>
     <a href="">
       <h1>Browse</h1>
