added javascript widget for date entry and fixed browse event listings to display events

--- a/alpha/event/templates/events/create_event.html
+++ b/alpha/event/templates/events/create_event.html
@@ -10,4 +10,10 @@
     <input type="submit" value="Create event"/>
 </form>
 
+<script src="{{ STATIC_URL }}js/mylibs/jquery-ui-1.8.13.custom.min.js"></script>
+<script src="{{ STATIC_URL }}js/jqsplitdatetime.js"></script>
+{% endblock %}
+
+{% block css %}
+  <link rel="stylesheet" href="{{ STATIC_URL }}css/overcast/jquery-ui-1.8.13.custom.css?v=2">
 {% endblock %}
