--- a/alpha/home/templates/header.html
+++ b/alpha/home/templates/header.html
@@ -3,7 +3,7 @@
      <img src="{{ STATIC_URL }}img/p-logo.png">
   </a>
   <nav>
-    <a href="">
+    <a href="{% url event_browse %}">
       <h1>Browse</h1>
       <h3>Upcoming Events</h3>
     </a>
