--- a/alpha/home/templates/base.html
+++ b/alpha/home/templates/base.html
@@ -20,7 +20,7 @@
 
   <!-- CSS: implied media="all" -->
   <link rel="stylesheet" href="{{ STATIC_URL }}css/style.css?v=2">
-
+  {% block css %}{% endblock %}
   <!-- Uncomment if you are specifically targeting less enabled mobile browsers
   <link rel="stylesheet" media="handheld" href="{{ STATIC_URL }}css/handheld.css?v=2">  -->
 
