added editing events, and emails

--- a/alpha/event/templates/events/event_description.html
+++ b/alpha/event/templates/events/event_description.html
@@ -7,12 +7,12 @@
   </header>
   
   <section>
-    <span class="event_description">
+    <div id="event_description">
       {{ event.description }}
-    </span>
-    <span class="event_location">
+    </div>
+    <div id="event_location">
       {{ event.location }}
-    </span>
+    </div>
   </section>
 </div>
 {% endblock %}
