finished with the user registration stuff

--- a/alpha/home/templates/header.html
+++ b/alpha/home/templates/header.html
@@ -14,10 +14,10 @@
   </nav>
 
   <nav id="user-nav">
-    <a href="">
+    <a href="{% url registration_register %}">
       <h4>Join</h4>
     </a>
-    <a href="">
+    <a href="{% url auth_login %}">
       <h4>Log In</h4>
     </a>
   </nav>
