added user views in citi_user

--- a/alpha/citi_user/templates/registration/registration_form.html
+++ b/alpha/citi_user/templates/registration/registration_form.html
@@ -15,7 +15,7 @@
     </fieldset>
     {% with button_label="Create my account" %}
     <input type="submit" value="{{ button_label }}">
-    <h6>By clicking '{{ button_label }}' you agree to the <a href="{% url terms %}">Terms &amp; Conditions.</a></h6>
+    <h6>By clicking '{{ button_label }}' you agree to the <a href="{% url citi_user_terms %}">Terms &amp; Conditions.</a></h6>
     {% endwith %}
   </form>
 </div>
