added tag functionality to the site

--- a/alpha/event/templates/events/event_description_small.html
+++ b/alpha/event/templates/events/event_description_small.html
@@ -18,12 +18,12 @@
       {{ event.misc_notes }}
     </p>
   </div>
-{% comment %}
   <div class="tags">
+    {% for tag in event.tags.all %}
     <p>
-      {{ event.tags }}
+      {{ tag }}
     </p>
+    {% endfor %}
   </div>
-{% endcomment %}
 </div>
 {% endif %}
