implemented and bug tested tag filters for browse view

--- a/alpha/event/templates/events/browse_events.html
+++ b/alpha/event/templates/events/browse_events.html
@@ -12,7 +12,7 @@
     {% if tag.slug == "" %}
     <p><a href = "{% url event_browse %}">{{ tag.name }} ({{ tag.number }})</a></p>
     {% else %}
-    <p><a href = "{% url event_browse_tags tags=tag.slug %}">{{ tag.name }} ({{ tag.number }})</a></p>
+    <p><a href = "{% url event_browse_tags old_tags=tag.slug %}">{{ tag.name }} ({{ tag.number }})</a></p>
     {% endif %}
     {% endfor %}
   </div>
