added filter to browser

--- a/alpha/event/templates/events/browse_events.html
+++ b/alpha/event/templates/events/browse_events.html
@@ -12,6 +12,7 @@
     <p><a href = "{% url event_browse_tags_date date="today" old_tags=current_tags %}">Today</a></p>
     <p><a href = "{% url event_browse_tags_date date="tomorrow" old_tags=current_tags %}">Tomorrow</a></p>
     <p><a href = "{% url event_browse_tags_date date="this-weekend" old_tags=current_tags %}">This weekend</a></p>
+    <p><a href = "{% url event_browse_tags_date date="next-weekend" old_tags=current_tags %}">Next weekend</a></p>
     <p><a href = "{% url event_browse_tags_date date="this-week" old_tags=current_tags %}">This week</a></p>
     <p><a href = "{% url event_browse_tags_date date="next-week" old_tags=current_tags %}">Next week</a></p>
   </div>
