--- a/shell/style.css
+++ b/shell/style.css
@@ -62,7 +62,7 @@ table {
 
 
 html { background: url('img/bg.png') repeat-x 0 0; font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 13px; }
-.wrapper { width: 940px; margin: 0 auto; }
+.wrapper { position: relative; width: 940px; margin: 0 auto; }
 
 a { color: #343796; text-decoration: none; }
 a:hover { text-decoration: underline; }
@@ -87,8 +87,16 @@ a:hover { text-decoration: underline; }
 #user-nav li { padding-right: 7px; }
 #user-nav a { padding: 5px; }
 
-#city-nav { position: absolute; bottom: 14px; right: 30px; font-size: 13px; float: right; width: 100px; text-align: right; }
-#city-nav .downtick { display: block; float: right; width: 0; height: 0; border-left: 4px solid transparent; border-right: 4px solid transparent; border-top: 4px solid #fff; margin: 5px 0 0 6px; }
+#city-nav { position: absolute; bottom: 2px; right: 23px; font-size: 13px; float: right; width: 100px; text-align: right; height: 32px; line-height: 33px; }
+#city-nav .downtick { display: block; float: right; width: 0; height: 0; border-left: 4px solid transparent; border-right: 4px solid transparent; border-top: 4px solid #fff; margin: 15px 8px 0 6px }
+#city-nav a { cursor: pointer; display: block; height: 32px; width: 100%; border-radius: 2px; }
+#city-nav a:hover, #city-nav a.active { background: #393c97; }
+
+#city-widget { display: none; position: absolute; width: 210px; min-height: 1px; top: 74px; right: 22px; padding: 10px 20px; background: #393c97; border-radius: 3px; color: #d7d8eb; font-size: 12px; font-weight: bold; }
+#city-widget.active { display: block; }
+#city-widget p { line-height: 1.4em; margin: 1em 0; text-shadow: -1px -1px 0 #202265; }
+#city-widget a { color: #ffebac; }
+#city-widget .white { color: #fff; }
 
 #date-nav { height: 40px; padding-left: 97px; background: url('img/see-events-for.png') no-repeat 9px 50%; font-size: 12px; }
 #date-nav li { float: left; }
