--- a/shell/style.css
+++ b/shell/style.css
@@ -90,7 +90,7 @@ a:hover { text-decoration: underline; }
 #city-nav { position: absolute; bottom: 2px; right: 23px; font-size: 13px; float: right; width: 100px; text-align: right; height: 32px; line-height: 33px; }
 #city-nav .downtick { display: block; float: right; width: 0; height: 0; border-left: 4px solid transparent; border-right: 4px solid transparent; border-top: 4px solid #fff; margin: 15px 8px 0 6px }
 #city-nav a { cursor: pointer; display: block; height: 32px; width: 100%; border-radius: 2px; }
-#city-nav a:hover, #city-nav a.active { background: #393c97; }
+#city-nav a.active { background: #393c97; }
 
 #city-widget { display: none; position: absolute; width: 210px; min-height: 1px; top: 74px; right: 22px; padding: 10px 20px; background: #393c97; border-radius: 3px; color: #d7d8eb; font-size: 12px; font-weight: bold; }
 #city-widget.active { display: block; }
@@ -100,9 +100,12 @@ a:hover { text-decoration: underline; }
 
 #date-nav { height: 40px; padding-left: 97px; background: url('img/see-events-for.png') no-repeat 9px 50%; font-size: 12px; }
 #date-nav li { float: left; }
-#date-nav a { display: block; height: 40px; padding: 0 13px; color: #3c3d76; font-weight: bold; line-height: 41px; }
-#date-nav a:hover { background: #fbfaf6; border-bottom: 2px solid #fff; height: 38px; text-decoration: none; }
-#date-nav a.current { background: #fff; }
+#date-nav a { display: block; height: 40px; padding: 0 13px; color: #3c3d76; cursor: pointer; font-weight: bold; line-height: 41px; }
+#date-nav a.jump, #date-nav a.jump:hover { background: url('img/calendar.png') no-repeat 12px -29px; padding: 0 13px 0 34px; }
+#date-nav a:hover { background-color: #fbfaf6 !important; border-bottom: 2px solid #fff; height: 38px; text-decoration: none; }
+#date-nav a.current { background-color: #fff !important; }
+
+
 
 #main { overflow: hidden; width: 940px; padding: 10px 0 50px; }
 
