--- a/shell/style.css
+++ b/shell/style.css
@@ -105,15 +105,16 @@ a:hover { text-decoration: underline; }
 #date-nav a:hover { background-color: #fbfaf6 !important; border-bottom: 2px solid #fff; height: 38px; text-decoration: none; }
 #date-nav a.current { background-color: #fff !important; }
 
-
-
-#main { overflow: hidden; width: 940px; padding: 10px 0 50px; }
+#main { overflow: hidden; width: 940px; padding: 10px 0 60px; }
 
 #tags { width: 140px; margin: 20px 10px 0 0; float: left; font-size: 12px; }
-#tags li { height: 26px; }
-#tags a { display: block; height: 26px; padding-left: 9px; border-radius: 3px; font-weight: bold; line-height: 27px; }
-#tags a.current, #tags a:hover { background: #343796; color: #fff; text-decoration: none; }
-#tags li:first-child { padding-bottom: 3px; border-bottom: 1px solid #ccc; margin-bottom: 3px; }
+#tags li { height: 27px; margin-bottom: 1px; }
+#tags a { display: block; height: 27px; padding-left: 9px; border-radius: 3px; font-weight: bold; line-height: 27px; }
+#tags a.active, #tags a:hover { background: #343796 url('img/tag-icons.png') no-repeat 120px 6px; color: #fff; text-decoration: none; }
+#tags a.active { background-position: 120px -31px; }
+#tags a.active:hover { background-position: 120px -68px; }
+#tags li:first-child { padding-bottom: 2px; border-bottom: 1px solid #ccc; margin-bottom: 2px; }
+#tags li:first-child a.active { background: #343796; }
 #tags span.downtick, #tags span.uptick { display: block; float: left; width: 0; height: 0; border-left: 3px solid transparent; border-right: 3px solid transparent; border-top: 3px solid #000; margin: 3px 2px; }
 #tags span.uptick { border-left: 3px solid transparent; border-right: 3px solid transparent; border-bottom: 3px solid #000; border-top: 0; margin: 3px 2px; }
 #tags span.tickbox { display: block; float: left; height: 9px; width: 10px; margin: 8px 4px 0 0; border: 1px solid #999; }
@@ -140,7 +141,7 @@ a:hover { text-decoration: underline; }
 
 form {  }
 form p { margin: 0 0 20px; }
-form p label { font-weight: 11px; font-weight: bold; }
+form p label { font-size: 11px; font-weight: bold; }
 input.text, textarea, form input.othertext, select { height: 18px; margin: 0 0 20px; padding: 6px; background: #f9f9f9; box-shadow: inset 0 0 4px #999; border: 1px solid #919191; border-radius: 2px; font-size: 15px; width: 300px; } 
 p.remember { margin: 0 0 10px; }
 p.remember label { color: #4c4c4c; font-size: 11px; font-weight: normal; margin-left: 2px; }
@@ -189,9 +190,7 @@ form .password { font-size: 16px; }
 .button:active { 
 	background: #494da0;	
 }
-.page { width: 100px; }
-
-
+.button.page { width: 100px; }
 
 #ads { width: 125px; overflow: hidden; padding: 20px 0 0 11px; }
 #ads p { margin-bottom: 10px; color: #999; font-size: 11px; }
