--- a/alpha/event/templates/events/create_event.html
+++ b/alpha/event/templates/events/create_event.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div id="create_event">
-<form method="post">
+<form method="post" enctype="multipart/form-data">
     {% csrf_token %}
     <fieldset>
       {{ form.as_p }}
