--- a/alpha/home/templates/footer.html
+++ b/alpha/home/templates/footer.html
@@ -1,3 +1,11 @@
-<footer>
-  <span>&copy; Peak Experience Studios 2011</span>
+<footer id="footer">
+  <div class="wrapper">
+    <p>&copy; Cityfusion 2010.</p>
+    <nav>
+      <ul>
+	<li><a href="{% url feedback %}">Feedback</a></li>
+	<li><a href="{% url advertise %}">Advertise</a></li>
+      </ul>
+    </nav>
+  </div>
 </footer>
