--- a/alpha/home/templates/ads.html
+++ b/alpha/home/templates/ads.html
@@ -1,2 +1,9 @@
-<div id="ads">
-</div>
+<aside id="ads">
+  <p>Advertisement</p>
+  <ul>
+    <li><a href=""></a></li>
+    <li><a href=""></a></li>
+    <li><a href=""></a></li>
+    <li><a href=""></a></li>
+  </ul>
+</aside>
