--- a/alpha/citi_user/templates/registration/registration_form.html
+++ b/alpha/citi_user/templates/registration/registration_form.html
@@ -1,23 +1,14 @@
 {% extends 'home.html' %}
 
 {% block content %}
-
-<div id="registration_form">
-  <header>
-    <h1>Sign up</h1>
-    <p>Create your account now</p>
-  </header>
-
-  <form class="register-login" method="post">
-    {% csrf_token %}
-    <fieldset>
-      {{ form.as_p }}
-    </fieldset>
-    {% with button_label="Create my account" %}
-    <input type="submit" value="{{ button_label }}">
-    <h6>By clicking '{{ button_label }}' you agree to the <a href="{% url citi_user_terms %}">Terms &amp; Conditions.</a></h6>
-    {% endwith %}
-  </form>
-</div>
-
+  <section class="body">
+    <h1>Register for Cityfusion</h1>
+    <form class="register-login" method="post">
+      {% csrf_token %}
+      <fieldset>
+	{{ form.as_p }}
+      </fieldset>
+      <input type="submit" class="submit button close" value="Register">      
+    </form>
+  </section><!-- .body -->
 {% endblock %}
