--- a/alpha/home/static/css/style.css
+++ b/alpha/home/static/css/style.css
@@ -1,182 +1,74 @@
-/**
- * HTML5 ✰ Boilerplate
- *
- * style.css contains a reset, font normalization and some base styles.
- *
- * Credit is left where credit is due.
- * Much inspiration was taken from these projects:
- * - yui.yahooapis.com/2.8.1/build/base/base.css
- * - camendesign.com/design/
- * - praegnanz.de/weblog/htmlcssjs-kickstart
- */
-
-
-/**
- * html5doctor.com Reset Stylesheet (Eric Meyer's Reset Reloaded + HTML5 baseline)
- * v1.6.1 2010-09-17 | Authors: Eric Meyer & Richard Clark
- * html5doctor.com/html-5-reset-stylesheet/
- */
-
-html, body, div, span, object, iframe,
+html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-abbr, address, cite, code, del, dfn, em, img, ins, kbd, q, samp,
-small, strong, sub, sup, var, b, i, dl, dt, dd, ol, ul, li,
+abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, figcaption, figure,
+article, aside, canvas, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section, summary,
 time, mark, audio, video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
+	margin: 0;
+	padding: 0;
+	border: 0;
+	outline: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
 }
 
-article, aside, details, figcaption, figure,
+a { margin: 0; padding: 0; font-size: 100%; vertical-align: baseline; background: transparent; }
+
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
-  display: block;
+	display: block;
 }
-
-blockquote, q { quotes: none; }
-
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
 blockquote:before, blockquote:after,
-q:before, q:after { content: ""; content: none; }
-
-ins { background-color: #ff9; color: #000; text-decoration: none; }
-
-mark { background-color: #ff9; color: #000; font-style: italic; font-weight: bold; }
-
-del { text-decoration: line-through; }
-
-abbr[title], dfn[title] { border-bottom: 1px dotted; cursor: help; }
-
-table { border-collapse: collapse; border-spacing: 0; }
-
-hr { display: block; height: 1px; border: 0; border-top: 1px solid #ccc; margin: 1em 0; padding: 0; }
-
-input, select { vertical-align: middle; }
-
-
-/**
- * Font normalization inspired by YUI Library's fonts.css: developer.yahoo.com/yui/
- */
-
-body { font:13px/1.231 sans-serif; *font-size:small; } /* Hack retained to preserve specificity */
-select, input, textarea, button { font:99% sans-serif; }
-
-/* Normalize monospace sizing:
-   en.wikipedia.org/wiki/MediaWiki_talk:Common.css/Archive_11#Teletype_style_fix_for_Chrome */
-pre, code, kbd, samp { font-family: monospace, sans-serif; }
-
-
-/**
- * Minimal base styles.
- */
-
-/* Always force a scrollbar in non-IE */
-html { overflow-y: scroll; }
-
-/* Accessible focus treatment: people.opera.com/patrickl/experiments/keyboard/test */
-a:hover, a:active { outline: none; }
-
-ul, ol { margin-left: 2em; }
-ol { list-style-type: decimal; }
-
-/* Remove margins for navigation lists */
-nav ul, nav li { margin: 0; list-style:none; list-style-image: none; }
-
-small { font-size: 85%; }
-strong, th { font-weight: bold; }
-
-td { vertical-align: top; }
-
-/* Set sub, sup without affecting line-height: gist.github.com/413930 */
-sub, sup { font-size: 75%; line-height: 0; position: relative; }
-sup { top: -0.5em; }
-sub { bottom: -0.25em; }
-
-pre {
-  /* www.pathf.com/blogs/2008/05/formatting-quoted-code-in-blog-posts-css21-white-space-pre-wrap/ */
-  white-space: pre; white-space: pre-wrap; word-wrap: break-word;
-  padding: 15px;
+q:before, q:after {
+	content: '';
+	content: none;
 }
 
-textarea { overflow: auto; } /* www.sitepoint.com/blogs/2010/08/20/ie-remove-textarea-scrollbars/ */
+/* remember to define visible focus styles! 
+:focus {
+	outline: ?????;
+} */
 
-.ie6 legend, .ie7 legend { margin-left: -7px; } 
-
-/* Align checkboxes, radios, text inputs with their label by: Thierry Koblentz tjkdesign.com/ez-css/css/base.css  */
-input[type="radio"] { vertical-align: text-bottom; }
-input[type="checkbox"] { vertical-align: bottom; }
-.ie7 input[type="checkbox"] { vertical-align: baseline; }
-.ie6 input { vertical-align: text-bottom; }
-
-/* Hand cursor on clickable input elements */
-label, input[type="button"], input[type="submit"], input[type="image"], button { cursor: pointer; }
-
-/* Webkit browsers add a 2px margin outside the chrome of form elements */
-button, input, select, textarea { margin: 0; }
-
-/* Colors for form validity */
-input:valid, textarea:valid   {  }
-input:invalid, textarea:invalid {
-   border-radius: 1px; -moz-box-shadow: 0px 0px 5px red; -webkit-box-shadow: 0px 0px 5px red; box-shadow: 0px 0px 5px red;
+/* remember to highlight inserts somehow! */
+ins {
+	text-decoration: none;
 }
-.no-boxshadow input:invalid, .no-boxshadow textarea:invalid { background-color: #f0dddd; }
-
-
-/* These selection declarations have to be separate
-   No text-shadow: twitter.com/miketaylr/status/12228805301
-   Also: hot pink! */
-::-moz-selection{ background: #FF5E99; color:#fff; text-shadow: none; }
-::selection { background:#FF5E99; color:#fff; text-shadow: none; }
-
-/* j.mp/webkit-tap-highlight-color */
-a:link { -webkit-tap-highlight-color: #FF5E99; }
-
-/* Make buttons play nice in IE:
-   www.viget.com/inspire/styling-the-button-element-in-internet-explorer/ */
-button {  width: auto; overflow: visible; }
-
-/* Bicubic resizing for non-native sized IMG:
-   code.flickr.com/blog/2008/11/12/on-ui-quality-the-little-things-client-side-image-resizing/ */
-.ie7 img { -ms-interpolation-mode: bicubic; }
-
-/**
- * You might tweak these..
- */
-
-body, select, input, textarea {
-  /* #444 looks better than black: twitter.com/H_FJ/statuses/11800719859 */
-  color: #444;
-  /* Set your base font here, to apply evenly */
-  /* font-family: Georgia, serif;  */
+del {
+	text-decoration: line-through;
 }
 
-/* Headers (h1, h2, etc) have no default font-size or margin; define those yourself */
-h1, h2, h3, h4, h5, h6 { font-weight: bold; }
-
-a, a:active, a:visited { color: #607890; }
-a:hover { color: #036; }
-
-
-/**
- * Primary styles
- *
- * Author:
- */
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
 
 
-html { background: url('img/bg.png') repeat-x 0 0; font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 13px; }
+
+html { background: url('/static/img/bg.png') repeat-x 0 0; font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 13px; }
 .wrapper { position: relative; width: 940px; margin: 0 auto; }
 
 a { color: #343796; text-decoration: none; }
 a:hover { text-decoration: underline; }
 
 #header { height: 77px; position: relative; }
-#header h1 { position: absolute; top: 13px; left: 0px; width: 187px; height: 50px; background: url('img/logo.png') no-repeat 7px 7px; text-indent: -9999px; }
+#header h1 { position: absolute; top: 13px; left: 0px; width: 187px; height: 50px; background: url('/static/img/logo.png') no-repeat 7px 7px; text-indent: -9999px; }
 #header h1 a { display: block; height: 100%; outline: 0;  text-shadow: -1px -1px 0 #202265;  }
 #header h2 { text-indent: -9999px; }
 
@@ -186,7 +78,7 @@ a:hover { text-decoration: underline; }
 #main-nav { position: absolute; top: 21px; left: 205px; float: left; }
 #main-nav li { height: 37px; width: 131px; }
 #main-nav a { display: block; height: 37px; width: 93px; line-height: 38px; padding: 0 19px; }
-#main-nav a.current { background: url('img/nav-bg.png') no-repeat 0 0; text-shadow: 0 0 2px #babbd5; }
+#main-nav a.current { background: url('/static/img/nav-bg.png') no-repeat 0 0; text-shadow: 0 0 2px #babbd5; }
 #main-nav a.current:hover { text-decoration: none; }
 #main-nav a.post { margin-left: 4px; }
 #main-nav a.post.current { margin: 0; padding: 0 23px; }
@@ -206,10 +98,10 @@ a:hover { text-decoration: underline; }
 #city-widget a { color: #ffebac; }
 #city-widget .white { color: #fff; }
 
-#date-nav { height: 40px; padding-left: 97px; background: url('img/see-events-for.png') no-repeat 9px 50%; font-size: 12px; }
+#date-nav { height: 40px; padding-left: 97px; background: url('/static/img/see-events-for.png') no-repeat 9px 50%; font-size: 12px; }
 #date-nav li { float: left; }
 #date-nav a { display: block; height: 40px; padding: 0 13px; color: #3c3d76; cursor: pointer; font-weight: bold; line-height: 41px; }
-#date-nav a.jump, #date-nav a.jump:hover { background: url('img/calendar.png') no-repeat 13px -29px; padding: 0 13px 0 34px; }
+#date-nav a.jump, #date-nav a.jump:hover { background: url('/static/img/calendar.png') no-repeat 13px -29px; padding: 0 13px 0 34px; }
 #date-nav a:hover { background-color: #fbfaf6 !important; border-bottom: 2px solid #fff; height: 38px; text-decoration: none; }
 #date-nav a.current { background-color: #fff !important; }
 
@@ -218,7 +110,7 @@ a:hover { text-decoration: underline; }
 #tags { width: 140px; margin: 20px 10px 0 0; float: left; font-size: 12px; }
 #tags li { height: 27px; margin-bottom: 1px; }
 #tags a { display: block; height: 27px; padding-left: 9px; border-radius: 3px; font-weight: bold; line-height: 27px; }
-#tags a.active, #tags a:hover { background: #343796 url('img/tag-icons.png') no-repeat 120px 6px; color: #fff; text-decoration: none; }
+#tags a.active, #tags a:hover { background: #343796 url('/static/img/tag-icons.png') no-repeat 120px 6px; color: #fff; text-decoration: none; }
 #tags a.active { background-position: 120px -31px; }
 #tags a.active:hover { background-position: 120px -68px; }
 #tags li:first-child { padding-bottom: 2px; border-bottom: 1px solid #ccc; margin-bottom: 2px; }
@@ -260,7 +152,7 @@ input.text, textarea, form input.othertext, select { height: 18px; margin: 0 0 2
 input.wide, textarea.wide { width: 400px; }
 input.othertext { height: 14px; margin-left: 7px; width: 200px; }
 input.file { margin-top: 8px; }
-input.date { background: #f9f9f9 url('img/calendar.png') no-repeat 131px 50%; width: 140px; }
+input.date { background: #f9f9f9 url('/static/img/calendar.png') no-repeat 131px 50%; width: 140px; }
 select { height: 32px; width: 100px; margin-left: 8px; background: #fff; border-radius: 0px; font-size: 12px; vertical-align: top; }
 textarea { height: 75px; }
 
@@ -285,83 +177,3 @@ form .description { font-size: 11px; color: #999; }
 #footer p { float: left; color: #797979; padding-left: 9px; }
 #footer li { float: left; padding-left: 15px; }
 #footer a { color: #343796; }
-
-
-
-
-/**
- * Non-semantic helper classes: please define your styles before this section.
- */
-
-/* For image replacement */
-.ir { display: block; text-indent: -999em; overflow: hidden; background-repeat: no-repeat; text-align: left; direction: ltr; }
-
-/* Hide for both screenreaders and browsers:
-   css-discuss.incutio.com/wiki/Screenreader_Visibility */
-.hidden { display: none; visibility: hidden; }
-
-/* Hide only visually, but have it available for screenreaders: by Jon Neal.
-  www.webaim.org/techniques/css/invisiblecontent/  &  j.mp/visuallyhidden */
-.visuallyhidden { border: 0; clip: rect(0 0 0 0); height: 1px; margin: -1px; overflow: hidden; padding: 0; position: absolute; width: 1px; }
-/* Extends the .visuallyhidden class to allow the element to be focusable when navigated to via the keyboard: drupal.org/node/897638 */
-.visuallyhidden.focusable:active,
-.visuallyhidden.focusable:focus { clip: auto; height: auto; margin: 0; overflow: visible; position: static; width: auto; }
-
-/* Hide visually and from screenreaders, but maintain layout */
-.invisible { visibility: hidden; }
-
-/* The Magnificent Clearfix: Updated to prevent margin-collapsing on child elements.
-   j.mp/bestclearfix */
-.clearfix:before, .clearfix:after { content: "\0020"; display: block; height: 0; overflow: hidden; }
-.clearfix:after { clear: both; }
-/* Fix clearfix: blueprintcss.lighthouseapp.com/projects/15318/tickets/5-extra-margin-padding-bottom-of-page */
-.clearfix { zoom: 1; }
-
-
-
-/**
- * Media queries for responsive design.
- *
- * These follow after primary styles so they will successfully override.
- */
-
-@media all and (orientation:portrait) {
-  /* Style adjustments for portrait mode goes here */
-
-}
-
-@media all and (orientation:landscape) {
-  /* Style adjustments for landscape mode goes here */
-
-}
-
-/* Grade-A Mobile Browsers (Opera Mobile, Mobile Safari, Android Chrome)
-   consider this: www.cloudfour.com/css-media-query-for-mobile-is-fools-gold/ */
-@media screen and (max-device-width: 480px) {
-
-
-  /* Uncomment if you don't want iOS and WinMobile to mobile-optimize the text for you: j.mp/textsizeadjust */
-  /* html { -webkit-text-size-adjust:none; -ms-text-size-adjust:none; } */
-}
-
-
-/**
- * Print styles.
- *
- * Inlined to avoid required HTTP connection: www.phpied.com/delay-loading-your-print-css/
- */
-@media print {
-  * { background: transparent !important; color: black !important; text-shadow: none !important; filter:none !important;
-  -ms-filter: none !important; } /* Black prints faster: sanbeiji.com/archives/953 */
-  a, a:visited { color: #444 !important; text-decoration: underline; }
-  a[href]:after { content: " (" attr(href) ")"; }
-  abbr[title]:after { content: " (" attr(title) ")"; }
-  .ir a:after, a[href^="javascript:"]:after, a[href^="#"]:after { content: ""; }  /* Don't show links for images, or javascript/internal links */
-  pre, blockquote { border: 1px solid #999; page-break-inside: avoid; }
-  thead { display: table-header-group; } /* css-discuss.incutio.com/wiki/Printing_Tables */
-  tr, img { page-break-inside: avoid; }
-  @page { margin: 0.5cm; }
-  p, h2, h3 { orphans: 3; widows: 3; }
-  h2, h3{ page-break-after: avoid; }
-}
-
