site merged with styles and date formatting works well

--- a/alpha/home/templates/base.html
+++ b/alpha/home/templates/base.html
@@ -29,11 +29,12 @@
 
 </head>
 
-<body id="cityfusion">
-  <div id="wrapper">
+<body>
+  <div class="wrapper">
     {% block page %}
     {% endblock %}
   </div> 
+  {% include 'footer.html' %}
 
   <!-- JavaScript at the bottom for fast page loading -->
 
