--- a/alpha/event/templates/events/event_description_small.html
+++ b/alpha/event/templates/events/event_description_small.html
@@ -1,30 +1,17 @@
 {% if event != null %}
-<div class="event_picture">
+<li>
   {% load event_pictures %}
-  <img src="{% event_picture_url event %}" alt="" width="40" size="40">
-</div>
-<div class="event_small_info">
-  <div class="name">
-    <a href="{% url event_view event.slug %}">
-      {{ event.name }}
-    </a>
-  </div>
-  <div class="start_time">
-    <p>
-      {{ event.start_time }}
-    </p>
-  </div>
-  <div class="misc_notes">
-    <p>
-      {{ event.misc_notes }}
-    </p>
-  </div>
-  <div class="tags">
+  <img src="{% event_picture_url event %}" alt="">
+  <br>
+  <a href="{% url event_view event.slug %}">{{ event.name }}</a>
+  <ul>
+    {% load date_formatting %}
+    <li>{{ event.start_time|contextualize_date }}</li>
+    <li>{{ event.location }}</li>
+    <li>{{ event.price }}</li>
     {% for tag in event.tags.all %}
-    <p>
-      {{ tag }}
-    </p>
+      <li>{{ tag }}</li>
     {% endfor %}
-  </div>
-</div>
+  </ul>
+</li>
 {% endif %}
