--- a/alpha/home/templates/header.html
+++ b/alpha/home/templates/header.html
@@ -6,8 +6,8 @@
 	
   <nav id="main-nav">
     <ul>
-      <li><a href="{% url event_browse %}">Browse Events</a></li>
-      <li><a href="{% url event_create %}" class="post current">Post an Event</a></li>
+      <li><a href="{% url event_browse %}"{% if browsing %} class="post current" {% endif %}>Browse Events</a></li>
+      <li><a href="{% url event_create %}"{% if posting %} class="post current" {% endif %}>Post an Event</a></li>
     </ul>
   </nav>
   <nav id="user-nav">
