--- a/alpha/home/templates/base.html
+++ b/alpha/home/templates/base.html
@@ -26,7 +26,6 @@
 
   <!-- All JavaScript at the bottom, except for Modernizr which enables HTML5 elements & feature detects -->
   <script src="{{ STATIC_URL }}js/libs/modernizr-1.7.min.js"></script>
-
 </head>
 
 <body>
@@ -41,8 +40,8 @@
   <!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if necessary -->
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.js"></script>
   <script>window.jQuery || document.write("<script src='{{ STATIC_URL }}js/libs/jquery-1.5.1.min.js'>\x3C/script>")</script>
-
-
+  <script src="{{ STATIC_URL }}js/libs/newcal.js"></script>
+  <script>$('.jump').newcal();</script>
   <!-- scripts concatenated and minified via ant build script-->
   <script src="{{ STATIC_URL }}js/plugins.js"></script>
   <script src="{{ STATIC_URL }}js/script.js"></script>
