almost full drawing

--- a/alpha/home/static/css/style.css
+++ b/alpha/home/static/css/style.css
@@ -180,8 +180,7 @@ form .description { font-size: 11px; color: #999; }
 
 .newcal-date-popup {
   background: #eee;
-  width: 200px;
-  height: 200px;
+  width: 350px;
   -moz-box-shadow: 2px 2px 5px #888;
   -webkit-box-shadow: 2px 2px 5px #888;
   box-shadow: 2px 2px 5px #888;
@@ -190,8 +189,21 @@ form .description { font-size: 11px; color: #999; }
   width: 100%;
 }
 .newcal-month-left {
-  width: 30px;
+    padding: 10px;
 }
 .newcal-month-right {
+    padding: 10px;
+}
+.newcal-month {
+    text-align: center;
+    padding: 10px;
+}
+.newcal-day {
+  text-align: center;
+  padding: 9px;
   width: 30px;
+  margin: 10px;
+}
+.newcal-day:hover {
+  background: #ddf;
 }
