--- a/alpha/home/static/css/style.css
+++ b/alpha/home/static/css/style.css
@@ -190,9 +190,14 @@ form .description { font-size: 11px; color: #999; }
 }
 .newcal-month-left {
     padding: 10px;
+    text-align: left;
+}
+.newcal-day-head {
+  text-align: center;
 }
 .newcal-month-right {
     padding: 10px;
+    text-align: right;
 }
 .newcal-month {
     text-align: center;
