--- a/alpha/home/templates/base.html
+++ b/alpha/home/templates/base.html
@@ -40,8 +40,9 @@
   <!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if necessary -->
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.js"></script>
   <script>window.jQuery || document.write("<script src='{{ STATIC_URL }}js/libs/jquery-1.5.1.min.js'>\x3C/script>")</script>
+  <script src="{{ STATIC_URL }}js/libs/sprintf-0.7-beta1.js"></script>
   <script src="{{ STATIC_URL }}js/libs/newcal.js"></script>
-  <script>$('.jump').newcal();</script>
+  <script>$('.jump').newcal({ onClick: window.jumpToDate });</script>
   <!-- scripts concatenated and minified via ant build script-->
   <script src="{{ STATIC_URL }}js/plugins.js"></script>
   <script src="{{ STATIC_URL }}js/script.js"></script>
