--- a/alpha/event/templates/events/browse_events.html
+++ b/alpha/event/templates/events/browse_events.html
@@ -4,22 +4,22 @@
 <nav id="date-nav">
   <ul>
     <li>
-      <a href="{% url event_browse_tags_date date="today" old_tags=current_tags %}" class="current">Today</a>
+      <a href="{% url event_browse_tags_date date="today" old_tags=current_tags %}" {% if page_date == "today" %}class="current"{% endif %}>Today</a>
     </li>
     <li>
-      <a href="{% url event_browse_tags_date date="tomorrow" old_tags=current_tags %}">Tomorrow</a>
+      <a href="{% url event_browse_tags_date date="tomorrow" old_tags=current_tags %}" {% if page_date == "tomorrow" %}class="current"{% endif %}>Tomorrow</a>
     </li>
     <li>
-      <a href="{% url event_browse_tags_date date="this-weekend" old_tags=current_tags %}">This weekend</a>
+      <a href="{% url event_browse_tags_date date="this-weekend" old_tags=current_tags %}" {% if page_date == "this-weekend" %}class="current"{% endif %}>This weekend</a>
     </li>
     <li>
-      <a href="{% url event_browse_tags_date date="next-weekend" old_tags=current_tags %}">Next weekend</a>
+      <a href="{% url event_browse_tags_date date="next-weekend" old_tags=current_tags %}" {% if page_date == "next-weekend" %}class="current"{% endif %}>Next weekend</a>
     </li>
     <li>
-      <a href="{% url event_browse_tags_date date="this-week" old_tags=current_tags %}">This week</a>
+      <a href="{% url event_browse_tags_date date="this-week" old_tags=current_tags %}" {% if page_date == "this-week" %}class="current"{% endif %}>This week</a>
     </li>
     <li>
-      <a href="{% url event_browse_tags_date date="next-week" old_tags=current_tags %}">Next week</a>
+      <a href="{% url event_browse_tags_date date="next-week" old_tags=current_tags %}" {% if page_date == "next-week" %}class="current"{% endif %}>Next week</a>
     </li>			
     <li>
       <a href="" class="jump">Jump to date</a>
