--- a/shell/style.css
+++ b/shell/style.css
@@ -128,7 +128,19 @@ a:hover { text-decoration: underline; }
 #pagination a.current { background: #ddd; color: #000; }
 
 .body { min-height: 600px; width: 600px; padding: 0 20px; float: left; border-left: 1px solid #ccc; border-right: 1px solid #ccc; }
+.body p { margin: 10px 0; color: #666; line-height: 1.3em; }
+.body a { font-weight: bold; }
+.body ul { margin: -5px 0 15px; overflow: hidden; }
+.body ul.tags { margin: 30px 0 0; }
+.body ul.tags li { background: url('img/icons.png') no-repeat 0 1px; }
+.body li { float: left; width: 178px; padding-left: 22px; height: 40px; line-height: 16px; }
+.body .date { background: url('img/icons.png') no-repeat 0 -62px; }
+.body .loc { background: url('img/icons.png') no-repeat 0 -124px; }
+.body .price { background: url('img/icons.png') no-repeat 0 -186px; }
 .noborder { border: 0; }
+
+#photo { float: left; padding-top: 20px; }
+
 
 .events li { position: relative; display: block; margin: 20px 0; color: #666; height: 40px; }
 .events li img { position: absolute; height: 40px; width: 40px; top: 0; left: 0; }
