--- a/shell/style.css
+++ b/shell/style.css
@@ -130,23 +130,25 @@ a:hover { text-decoration: underline; }
 .body { min-height: 600px; width: 600px; padding: 0 20px; float: left; border-left: 1px solid #ccc; border-right: 1px solid #ccc; }
 .body p { margin: 10px 0; color: #666; line-height: 1.3em; }
 .body a { font-weight: bold; }
-.body ul { margin: -5px 0 15px; overflow: hidden; }
-.body ul.tags { margin: 30px 0 0; }
-.body ul.tags li { background: url('img/icons.png') no-repeat 0 1px; }
-.body li { float: left; width: 178px; padding-left: 22px; height: 40px; line-height: 16px; }
-.body .date { background: url('img/icons.png') no-repeat 0 -62px; }
-.body .loc { background: url('img/icons.png') no-repeat 0 -124px; }
-.body .price { background: url('img/icons.png') no-repeat 0 -186px; }
 .noborder { border: 0; }
 
 #photo { float: left; padding-top: 20px; }
-
 
 .events li { position: relative; display: block; margin: 20px 0; color: #666; height: 40px; }
 .events li img { position: absolute; height: 40px; width: 40px; top: 0; left: 0; }
 .events li a { position: absolute; top: 0; left: 45px; padding: 5px; font-weight: bold; }
 .events li ul { position: absolute; left: 50px; top: 20px; }
 .events li li { float: left; margin: 5px 10px 0 0; padding: 0; height: 15px; font-size: 12px; }
+
+.detail ul { margin: -5px 0 15px; overflow: hidden; }
+.detail ul.tags { margin: 30px 0 0; }
+.detail ul.tags li { background: url('img/icons.png') no-repeat 0 1px; }
+.detail li { float: left; width: 178px; padding-left: 22px; height: 40px; line-height: 16px; }
+.detail .date { background: url('img/icons.png') no-repeat 0 -62px; }
+.detail .loc { background: url('img/icons.png') no-repeat 0 -124px; }
+.detail .price { background: url('img/icons.png') no-repeat 0 -186px; }
+
+
 
 .body h1 { font-size: 20px; font-weight: bold; margin: 25px 0; }
 .small { color: #999; font-size: 11px; }
@@ -164,7 +166,7 @@ input.text, textarea, form input.othertext, select { height: 18px; margin: 0 0 2
 input.wide, textarea.wide { width: 400px; }
 input.othertext { height: 14px; margin-left: 7px; width: 200px; }
 input.file { margin-top: 8px; }
-input.date { background: #f9f9f9 url('img/calendar.png') no-repeat 131px 50%; width: 140px; }
+input.date { background: #f9f9f9 url('img/calendar.png') no-repeat 131px 8px; width: 140px; }
 select { height: 32px; width: 100px; margin-left: 8px; background: #fff; border-radius: 0px; font-size: 12px; vertical-align: top; }
 textarea { height: 75px; }
 
