--- a/alpha/event/templates/events/event_description.html
+++ b/alpha/event/templates/events/event_description.html
@@ -1,18 +1,34 @@
 {% extends 'home.html' %}
 
 {% block content %}
-<div id="event_description">
-  <header>
-    {% include 'events/event_description_small.html' %}
-  </header>
+<aside id="photo">
+  {% load event_pictures %}
+  <img src="{% event_picture_url event 350 %}" width="250" height="350">
+</aside>
+
+<section class="body noborder detail">
+  <h1>{{ event.name }}</h1>
   
-  <section>
-    <div id="event_description">
-      {{ event.description }}
-    </div>
-    <div id="event_location">
-      {{ event.location }}
-    </div>
-  </section>
-</div>
+  <ul>
+    <li class="date">
+      {% load date_formatting %}
+      <a href="{% url event_browse_date date=event.start_time.date.isoformat %}">{{ event.start_time|just_day }}</a>
+      <br>{{ event.start_time|just_time }}
+      {% if event.end_time %}&mdash; {{ event.end_time|just_time }}{% endif %}
+    </li>
+    <li class="loc">
+      <a href="">{{ event.location }}</a>
+    </li>
+    <li class="price">
+      {{ event.price }}
+    </li>
+  </ul>
+  
+  <p>{{ event.description }}</p>
+  
+  <ul class="tags">
+    <li>{% for tag in event.tags.all %}<a href="">{{ tag }}</a>{% if not forloop.last %}, {% endif %}{% endfor %}</li>
+  </ul>
+
+</section>
 {% endblock %}
