--- a/alpha/home/static/css/style.css
+++ b/alpha/home/static/css/style.css
@@ -128,13 +128,28 @@ a:hover { text-decoration: underline; }
 #pagination a.current { background: #ddd; color: #000; }
 
 .body { min-height: 600px; width: 600px; padding: 0 20px; float: left; border-left: 1px solid #ccc; border-right: 1px solid #ccc; }
+.body p { margin: 10px 0; color: #666; line-height: 1.3em; }
+.body a { font-weight: bold; }
 .noborder { border: 0; }
+
+#photo { float: left; padding-top: 20px; }
+#photo img { display: block; height: 350px; width: 250px; }
 
 .events li { position: relative; display: block; margin: 20px 0; color: #666; height: 40px; }
 .events li img { position: absolute; height: 40px; width: 40px; top: 0; left: 0; }
 .events li a { position: absolute; top: 0; left: 45px; padding: 5px; font-weight: bold; }
 .events li ul { position: absolute; left: 50px; top: 20px; }
 .events li li { float: left; margin: 5px 10px 0 0; padding: 0; height: 15px; font-size: 12px; }
+
+.detail ul { margin: -5px 0 15px; overflow: hidden; }
+.detail ul.tags { margin: 30px 0 0; }
+.detail ul.tags li { background: url('/static/img/icons.png') no-repeat 0 1px; }
+.detail li { float: left; width: 178px; padding-left: 22px; height: 40px; line-height: 16px; }
+.detail .date { background: url('/static/img/icons.png') no-repeat 0 -62px; }
+.detail .loc { background: url('/static/img/icons.png') no-repeat 0 -124px; }
+.detail .price { background: url('/static/img/icons.png') no-repeat 0 -186px; }
+
+
 
 .body h1 { font-size: 20px; font-weight: bold; margin: 25px 0; }
 .small { color: #999; font-size: 11px; }
@@ -152,7 +167,7 @@ input.text, textarea, form input.othertext, select { height: 18px; margin: 0 0 2
 input.wide, textarea.wide { width: 400px; }
 input.othertext { height: 14px; margin-left: 7px; width: 200px; }
 input.file { margin-top: 8px; }
-input.date { background: #f9f9f9 url('/static/img/calendar.png') no-repeat 131px 50%; width: 140px; }
+input.date { background: #f9f9f9 url('/static/img/calendar.png') no-repeat 131px 8px; width: 140px; }
 select { height: 32px; width: 100px; margin-left: 8px; background: #fff; border-radius: 0px; font-size: 12px; vertical-align: top; }
 textarea { height: 75px; }
 
@@ -177,38 +192,3 @@ form .description { font-size: 11px; color: #999; }
 #footer p { float: left; color: #797979; padding-left: 9px; }
 #footer li { float: left; padding-left: 15px; }
 #footer a { color: #343796; }
-
-.newcal-date-popup {
-  background: #eee;
-  width: 350px;
-  -moz-box-shadow: 2px 2px 5px #888;
-  -webkit-box-shadow: 2px 2px 5px #888;
-  box-shadow: 2px 2px 5px #888;
-}
-.newcal-table {
-  width: 100%;
-}
-.newcal-month-left {
-    padding: 10px;
-    text-align: left;
-}
-.newcal-day-head {
-  text-align: center;
-}
-.newcal-month-right {
-    padding: 10px;
-    text-align: right;
-}
-.newcal-month {
-    text-align: center;
-    padding: 10px;
-}
-.newcal-day {
-  text-align: center;
-  padding: 9px;
-  width: 30px;
-  margin: 10px;
-}
-.newcal-day:hover {
-  background: #ddf;
-}
